--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <p><em>Code your answer in <code>main.js</code>. You may need to add extra html elements inside of the <code>div.answer-box</code>.</em></p>
       <div class="answer-box">
         <div class="nav-menu"><a href="#">home</a><a href="#">contact</a><a href="#">bios</a></div>
+        <button class='nav-button'>hide nav</button>
       </div>
     </div>
   </div>
@@ -24,6 +25,7 @@
       <h4>Your Work</h4>
       <p><em>Code your answer in <code>main.js</code>. You may need to add extra html elements inside of the <code>div.answer-box</code>.</em></p>
       <div class="answer-box">
+      <input class='text-box'>
         <p>guest list</p>
         <ul class="guest-list"></ul>
       </div>
@@ -37,7 +39,7 @@
       <h4>Your Work</h4>
       <p><em>Code your answer in <code>main.js</code>. You may need to add extra html elements inside of the <code>div.answer-box</code>.</em></p>
       <div class="answer-box">
-        <input type="text">
+        <input type="text" class='text-box2'>
         <p>guest list</p>
         <ul class="guest-list"></ul>
         good night
